プロフィール画像の修正

--- a/app/views/user/contents/_spotform.html.erb
+++ b/app/views/user/contents/_spotform.html.erb
@@ -1,7 +1,9 @@
 <div class="form-group">
-  <%= f.label :spot, "スポット" %>
+  <%= f.label :spot, "スポット（入力すると候補が表示されます）" %>
   <%= f.text_field :spot, class: "form-control form-control-sm", id: "address", type: "textbox", size: "50", autocomplete: "off" %>
 </div>
+
+<div id="map"></div>
 
 <script>
   let map;
@@ -34,11 +36,10 @@
           map: map,
           position: results[0].geometry.location
         });
-        document.getElementById('display').textContent = "検索結果：" + results[0].formatted_address;
       } else {
         alert('該当する結果がありませんでした：' + status);
       }
     });
   }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.dig(:placeAPI, :api_key) %>&libraries=places&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['API_KEY']%>&libraries=places&callback=initMap" async defer></script>
