--- a/app/views/user/contents/_form.html.erb
+++ b/app/views/user/contents/_form.html.erb
@@ -27,13 +27,9 @@
     <p><label>タグ(複数登録するには , で区切りましょう)</label></p>
     <%= f.text_field :name, value: @tag_list, class: "form-control form-control-sm" %>
   </div>
-  <div class="form-group">
-    <%= f.label :spot, "スポット（入力すると候補が表示されます）" %>
-    <%= f.text_field :spot, class: "form-control form-control-sm", id: "address", type: "textbox", size: "50", autocomplete: "off" %>
-  </div>
-
-  <div id="map"></div>
-
+  
+  <%= render 'user/contents/spotform' , f: f %>
+  
   <div class="form-group">
     <%= f.label :review, "レビューをつけるところ（とりあえず値を数値をしている）" %>
     <%= f.number_field :review, class: "form-control form-control-sm" %>
@@ -42,42 +38,3 @@
   <%= f.submit type, class: "btn btn-primary btn-sm" %>
   <%= link_to "戻る", contents_path, class: "btn btn-secondary btn-sm" %>
 <% end %>
-
-<script>
-  let map;
-  let geocoder;
-
-  function initMap() {
-    geocoder = new google.maps.Geocoder();
-
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: { lat: 40.7828, lng: -73.9653 },
-      zoom: 12,
-    });
-
-    const marker = new google.maps.Marker({
-      position: { lat: 40.7828, lng: -73.9653 },
-      map: map
-    });
-
-    const input = document.getElementById('address');
-    const autocomplete = new google.maps.places.Autocomplete(input);
-  }
-
-  function codeAddress() {
-    const inputAddress = document.getElementById('address').value;
-
-    geocoder.geocode({ 'address': inputAddress }, function (results, status) {
-      if (status === 'OK') {
-        map.setCenter(results[0].geometry.location);
-        const marker = new google.maps.Marker({
-          map: map,
-          position: results[0].geometry.location
-        });
-      } else {
-        alert('該当する結果がありませんでした：' + status);
-      }
-    });
-  }
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['API_KEY']%>&libraries=places&callback=initMap" async defer></script>
