管理者側の修正

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,9 +1,28 @@
-<h2>全ての投稿を確認する</h2>
-<p>
-  <% @content.each do |content| %>
-    <%= link_to content_path(content) do %>
-      <%= content.title %>
-    <% end %>
-  <% end %>
-</p>
+<div class="container">
+  <h2>全ての投稿を確認する</h2>
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <% @content.each do |content| %>
+        <div class="card mb-4">
+          <div class="card-body">
+            <h5 class="card-title"><%= link_to content.title, content_path(content) %></h5>
+            <p class="card-text">
+              <strong>投稿日:</strong> <%= content.created_at.strftime("%Y年%m月%d日") %><br>
+              <strong>ユーザー:</strong> <%= content.user.name if content.user %><br>
+              <strong>タグ:</strong>
+              <% content.tags.each do |tag| %>
+                <%= link_to searches_path, class: "badge badge-success", style: "opacity: 1;" do %>
+                  <%= tag.name %>
+                <% end %>
+              <% end %>
+            </p>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+
+
 
