--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,8 @@
 <h1>最初の画面　Homes#top</h1>
 <h1>タイトルを載せる</h1>
 <h2>このサイトのやり方を記載</h2>
-<h3>ランディング</h3>
+<h3>ランディングページにする</h3>
+<h3>本当ぬ</h3>
     <%= link_to "ゲストログイン（閲覧用）", homes_guest_sign_in_path, method: :post %>
     <%= link_to "新規登録としてはじめる", new_user_registration_path %>
     <%= link_to "ログインしてはじめる", new_user_session_path %>
