--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
         お疲れ様です！
       </li>
       <li class="nav-item">
-        <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+        <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-outline-danger" %>
       </li>
     <% end %>
   </div>
