--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,38 +1,47 @@
 <footer class="navbar navbar-light fixed-bottom" style="background-color: rgb(240, 153, 125);">
   <div class="container">
-    <ul class="footer-menu list-inline text-center">
-      <% unless current_page?(root_path) %>
-        <% if user_signed_in? %>
-          <li class="list-inline-item">
-            <%= link_to "マイページ", mypage_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "投稿一覧", contents_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "投稿する", new_content_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "検索", find_searches_path %>
-          </li>
-        <% else %>
-          <li class="list-inline-item">
-            <%= link_to "新規登録", new_user_registration_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "ログイン", new_user_session_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "投稿一覧", contents_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "検索", find_searches_path %>
-          </li>
+    <div class="col text-center">
+      <ul class="footer-menu list-inline">
+        <% unless current_page?(root_path) %>
+          <% if user_signed_in? %>
+            <li class="list-inline-item">
+              <%= link_to "マイページ", mypage_path %>
+            </li>
+            <li class="list-inline-item">
+              <%= link_to "投稿一覧", contents_path %>
+            </li>
+            <li class="list-inline-item">
+              <%= link_to "投稿する", new_content_path %>
+            </li>
+            <li class="list-inline-item">
+              <%= link_to "検索", find_searches_path %>
+            </li>
+          <% elsif admin_signed_in? %>
+            <li class="list-inline-item">
+              <%= link_to "投稿一覧", admin_homes_top_path %>
+            </li>
+            <li class="list-inline-item">
+              <%= link_to "タグ一覧", admin_tags_path %>
+            </li>
+            <li class="list-inline-item">
+              <%= link_to "ユーザ一覧", admin_users_path %>
+            </li>
+          <% else %>
+            <li class="list-inline-item">
+              <%= link_to "新規登録", new_user_registration_path %>
+            </li>
+            <li class="list-inline-item">
+              <%= link_to "ログイン", new_user_session_path %>
+            </li>
+            <li class="list-inline-item">
+              <%= link_to "投稿一覧", contents_path %>
+            </li>
+            <li class="list-inline-item">
+              <%= link_to "検索", find_searches_path %>
+            </li>
+          <% end %>
         <% end %>
-      <% end %>
-      <li class="list-inline-item">
-        <%= link_to "管理者ログイン", new_admin_session_path %>
-      </li>
-    </ul>
+      </ul>
+    </div>
   </div>
 </footer>
