--- a/app/views/user/contents/index.html.erb
+++ b/app/views/user/contents/index.html.erb
@@ -1,27 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
-      <% @contents.each do |content| %>
-        <div class="card mb-4">
-          <div class="card-body">
-            <h5 class="card-title"><%= link_to content.title, content_path(content) %></h5>
-            <p class="card-text">
-              <strong>投稿日:</strong> <%= content.created_at.strftime("%Y年%m月%d日") %><br>
-              <strong>ユーザー:</strong> <%= content.user.name if content.user %><br>
-              <strong>タグ:</strong>
-              <% content.tags.each do |tag| %>
-                <%= link_to searches_path, class: "badge badge-primary", style: "opacity: 1;" do %>
-                  <%= tag.name %>
-                <% end %>
-              <% end %>
-            </p>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
-
-
-
-
+<%= render 'index', contents: @contents %>
