管理者側のタグ作成とTOPの修正

--- a/app/views/user/contents/_show.html.erb
+++ b/app/views/user/contents/_show.html.erb
@@ -25,7 +25,7 @@
             <th>タグ一覧</th>
             <td>
               <% @content.tags.each do |tag| %>
-                <%= link_to tag.name, searches_path(tag), class: "badge badge-secondary" %>
+                <%= link_to tag.name, searches_path(tag), class: "badge badge-primary" %>
               <% end %>
             </td>
           </tr>
