--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -1,2 +1,42 @@
-<h1>Admin::Tags#index</h1>
-<p>Find me in app/views/admin/tags/index.html.erb</p>
+<h3>タグの作成/一覧と削除</h3>
+<div class="row">
+  <div class="col-md-4">
+    <div class="tag-form">
+      <%= form_with model: Tag.new, url: admin_tags_path do |f| %>
+        <div class="form-group">
+          <%= f.label :name, "タグ名" %>
+          <%= f.text_field :name, class: "form-control", placeholder: "タグ名を入力" %>
+        </div>
+        <%= f.submit "作成", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+  <div class="col-md-8">
+    <div class="tag-list">
+      <%= form_tag delete_admin_tags_path, method: :delete do %>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>タグ名</th>
+              <th>削除する</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @tags.each_slice(2) do |tags_row| %>
+              <tr>
+                <% tags_row.each do |tag| %>
+                  <td><%= tag.name %></td>
+                  <td><%= check_box_tag 'tag_ids[]', tag.id %></td>
+                <% end %>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <div class="text-center">
+          <%= submit_tag 'タグを削除する', class: "btn btn-danger" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
