--- a/app/views/user/contents/_form.html.erb
+++ b/app/views/user/contents/_form.html.erb
@@ -1,20 +1,5 @@
 <%= form_with model: content, local: true, class: "my-form" do |f| %>
-  <% if content.errors.any? %>
-    <div class="alert alert-danger">
-      <h2><%= content.errors.count %>つのエラーが発生しました</h2>
-      <ul>
-        <% content.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="form-group">
-    <%= f.label :visit_day, "訪問した日" %>
-    <%= f.date_field :visit_day, id: "visit-day-field", class: "form-control form-control-sm" %>
-    <button type="button" id="today-button" class="btn btn-secondary btn-sm">本日</button>
-  </div>
+  <%= render 'layouts/alerm', obj: content %>
   <div class="form-group">
     <%= f.label :title, "レビュータイトル" %>
     <%= f.text_field :title, class: "form-control form-control-sm" %>
@@ -23,12 +8,17 @@
     <%= f.label :text, "投稿内容" %>
     <%= f.text_area :text, class: "form-control form-control-sm", rows: 3 %>
   </div>
-  <div class="form-group">
-    <p><label>タグ(複数登録するには , で区切りましょう)</label></p>
-    <%= f.text_field :name, value: @tag_list, class: "form-control form-control-sm" %>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <%= f.label :visit_day, "訪問した日" %>
+      <%= f.date_field :visit_day, id: "visit-day-field", class: "form-control form-control-sm" %>
+    </div>
+    <div class="form-group col-md-6">
+      <%= f.label :name, "タグ(複数登録するには , で区切りましょう)" %>
+      <%= f.text_field :name, value: @tag_list, class: "form-control form-control-sm" %>
+    </div>
   </div>
-  
-  <%= render 'user/contents/spotform' , f: f %>
+  <%= render 'user/contents/spotform', f: f %>
   
   <div class="form-group">
     <%= f.label :review, "レビューをつけるところ（とりあえず値を数値をしている）" %>
