--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,11 @@
+body {
+  font-family: "Maru Antique Medium", sans-serif;
+}
+
+
 
 #body-main {
   background-color: rgb(255, 195, 161) ;
-  height: 100%;
 }
 
 main {
