--- a/app/views/user/contents/_show.html.erb
+++ b/app/views/user/contents/_show.html.erb
@@ -1,10 +1,11 @@
-  <div class="col-md-8">
-    <div class="card">
-      <div class="card-header">
-        <h5 class="card-title">投稿情報</h5>
-      </div>
-      <div class="card-body">
-        <table class="table">
+<div class="col-md-8">
+  <div class="card">
+    <div class="card-header">
+      <h5 class="card-title">投稿情報</h5>
+    </div>
+    <div class="card-body">
+      <table class="table pr-md">
+        <tbody>
           <tr>
             <th>投稿日</th>
             <td><%= @content.created_at.to_date %></td>
@@ -33,11 +34,16 @@
             <th>サウナ施設</th>
             <td><%= @content.spot%></td>
           </tr>
+        </tbody>
+      </table>
+      <table class="table table-main">
+        <tbody>
           <tr>
             <th>本文</th>
             <td><%= @content.text %></td>
           </tr>
-        </table>
-      </div>
+        </tbody>
+      </table>
     </div>
   </div>
+</div>
