--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -8,6 +8,26 @@
   <span class="add-search-tag">追加</span>
 </div>
 
+-------
+  <div class="form-group">
+    <div class="search-tag-form">
+      <span>
+        <%= text_field_tag nil, nil, class: "search-tag-field" %>
+      </span>
+      <span class="add-search-tag">追加</span>
+    </div>
+    <%# 追加されたタグを表示する領域 %>
+    <div class="added-tags">
+      <% content.tags.each do |tag| %>
+        <label class="tag-label">
+          <%= check_box_tag "content[tag_ids][]", tag.id, checked: true %>
+          <%= tag.name %>
+        </label>
+      <% end %>
+    </div>
+  </div>
+-------
+
 <script>
   $(function() {
     var search_tag_field = '.search-tag-field';
