--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -7,7 +7,7 @@
   <div class="text-center border-dotted border-t-2 border-fitting-pink py-20">
     <h1 class="font-kaisei text-2xl title-font text-gray-900 mb-4">ととの〜るの使い方</h1>
     <div class="text-base leading-relaxed mx-auto text-gray-500">
-      <p>ととのーるはサウナーが作る、サウナが好きな人のためのサ活（サウナ活動）レビューサイトです。<br>日々の自分自身のサ活に点数をつけて次回のサ活へ改善していこう</p>
+      <p>ととの〜るはサウナが好きな人のためのサ活（サウナ活動）レビューサイトです。<br>日々の自分自身のサ活に点数をつけて次回のサ活へ改善していくことを目的として作成しました。</p>
     </div>
     <div class="flex mt-6 justify-center">
       <div class="w-16 h-1 rounded-full bg-fitting-pink inline-flex"></div>
@@ -20,8 +20,8 @@
           <%= image_tag 'Sauna-bro.png', class: "img-fluid" %>
         </div>
         <div class="flex-grow">
-          <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その1. サ活をレビューしてみよう</h2>
-          <p class="leading-relaxed text-base text-gray-500">　まずは、ページ下部の新規登録ボタンから、ユーザ登録を行い日々のサ活や思い出のサ活をレビューしてみよう</p>
+          <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その1. みんなのサ活を見てみよう</h2>
+          <p class="leading-relaxed text-base text-gray-500">　まずは、ページ下部のゲストログインから、投稿しているサ活レビューをみてみよう</p>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
         </div>
         <div class="flex-grow">
           <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その2. ユーザ登録をしてみよう</h2>
-          <p class="leading-relaxed text-base text-gray-500">　三つ星トイレにユーザー登録すると、「スポット情報の投稿」や「投稿されたスポットへの三つ星評価」、「お気に入りのスポットの登録」などができるようになります。</p>
+          <p class="leading-relaxed text-base text-gray-500">　ユーザ登録すると、「サ活の投稿」ができるようになります<br>サウナ施設の入力は APIを導入してスポットの予測変換が可能となっています</p>
         </div>
       </div>
     </div>
