--- a/app/views/user/contents/_show.html.erb
+++ b/app/views/user/contents/_show.html.erb
@@ -26,7 +26,7 @@
             <th>タグ一覧</th>
             <td>
               <% @content.tags.each do |tag| %>
-                <%= link_to tag.name, searches_path(tag), class: "badge badge-primary" %>
+                <%= link_to tag.name, searches_path(tag_id: tag.id), class: "badge badge-primary" %>
               <% end %>
             </td>
           </tr>
