--- a/app/views/user/searches/find.html.erb
+++ b/app/views/user/searches/find.html.erb
@@ -1,14 +1,42 @@
 <h3>絞り込み検索を行います</h3>
+<div class="row">
+  <div class="col-6">
+    <%= form_tag(searches_path, method: :get) do %>
+      <label>開始日:</label>
+      <%= date_field_tag :start_date %>
+    
+      <label>終了日:</label>
+      <%= date_field_tag :end_date %>
+    
+      <label>最低点数:</label>
+      <%= number_field_tag :min_review %>
+    
+      <%= submit_tag "絞り込み" %>
+    <% end %>
+  </div>
+  
+  <div class="col-6">
+    <div class="tag-list">
+      <%= form_tag delete_admin_tags_path, method: :delete do %>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>タグ名</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @tags.each_slice(2) do |tags_row| %>
+              <tr>
+                <% tags_row.each do |tag| %>
+                  <td><%= link_to tag.name, searches_path(tag_id: tag.id) %></td>
+                <% end %>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% end %>
+    </div>
+  </div>
 
-<%= form_tag(searches_path, method: :get) do %>
-  <label>開始日:</label>
-  <%= date_field_tag :start_date %>
-
-  <label>終了日:</label>
-  <%= date_field_tag :end_date %>
-
-  <label>最低点数:</label>
-  <%= number_field_tag :min_review %>
-
-  <%= submit_tag "絞り込み" %>
-<% end %>
+</div>
