--- a/app/views/user/contents/_form.html.erb
+++ b/app/views/user/contents/_form.html.erb
@@ -23,51 +23,35 @@
     <%= f.label :review, "レビューをつけるところ（とりあえず値を数値をしている）" %>
     <%= f.number_field :review, class: "form-control form-control-sm" %>
   </div>
+   <!-- newとeditを区別するためのif文  -->
+  <% if content.id.nil? %>
+    <div class="form-group" id="star">
+      <%= f.label :rate %>
+      <%= f.hidden_field :rate, id: :review_star, class: 'form-control' %>
+      <div id="post_raty"></div>
+    </div>
+  <% else %>
+    <div class="form-group">
+      <%= render "static_rate", content: content %>
+    </div>
+  <% end %>
 
   <%= f.submit type, class: "btn btn-primary btn-sm" %>
   <%= link_to "戻る", contents_path, class: "btn btn-secondary btn-sm" %>
 <% end %>
 
 <script>
-  $(function() {
-    var search_tag_field = '.search-tag-field';
-    var search_tag_form = '.search-tag-form';
+  $(document).on('turbolinks:load', function() {
+    let elem = document.querySelector('#post_raty');
+    if (elem == null) return;
 
-    // 追加ボタンを押した時の処理(入力された内容を元にチェックボックスを随時追加)
-    var add_search_tag = function() {
-      // エラーメッセージが存在する場合、削除
-      $(".tag-alert").remove();
-
-      // 入力内容を取得
-      var tag_name = $(search_tag_field).val().trim();
-      // 追加済みのタグを取得して配列に詰め込む
-      var added_tags = [];
-      $(".tag-label").each(function() {
-        added_tags.push($(this).text().trim());
-      });
-
-      // 追加済みのタグと追加予定のタグの重複チェック
-      var is_duplicate = added_tags.some(function(value) {
-        return value === tag_name;
-      });
-
-      // 空ではなく、追加済みのタグと重複していない場合、追加
-      if (tag_name && !is_duplicate) {
-        // パラメータで渡す際に値が被るのを防ぐため現時刻を取得(被っていると統合されて複数渡せないため)
-        var id = new Date().getTime();
-
-        // 検索タグを登録できるチェックボックスを追加(入力内容を保持)
-        $('.added-tags').append($(`<label class="tag-label"><input class="tag-input" type="checkbox" checked="checked" name="content[tag_ids][]" value="${id}" />${' ' + tag_name}</label>`));
-
-        // チェックボックス追加後、入力フォームをリセット
-        $(search_tag_field).val('');
-      }
-      // 追加済みのタグと重複している場合、エラーメッセージを表示
-      if (is_duplicate) {
-        $(search_tag_form).after($(`<p class="tag-alert">※既に存在するタグです。</p>`));
-      }
+    elem.innerHTML = ""
+    let opt = {  
+      starOn: "<%= asset_path('star-on.png') %>",
+      starOff: "<%= asset_path('star-off.png') %>",
+      starHalf: "<%= asset_path('star-half.png') %>",
+      scoreName: 'content[rate]',
     };
-
-    $('.add-search-tag').on('click', add_search_tag); // 追加イベント発火
+    raty(elem, opt);
   });
 </script>
