--- a/app/views/user/contents/_show.html.erb
+++ b/app/views/user/contents/_show.html.erb
@@ -34,6 +34,10 @@
             <th>サウナ施設</th>
             <td><%= @content.spot%></td>
           </tr>
+          <tr>
+            <th>レビュー</th>
+            <td><%= render "static_rate", content: content %></td>
+          </tr>
         </tbody>
       </table>
       <table class="table table-main">
