--- a/app/views/user/searches/find.html.erb
+++ b/app/views/user/searches/find.html.erb
@@ -1,21 +1,43 @@
-<h3>絞り込み検索を行います</h3>
-<div class="row">
-  <div class="col-6">
-    <%= form_tag(searches_path, method: :get) do %>
-      <label>開始日:</label>
-      <%= date_field_tag :start_date %>
-    
-      <label>終了日:</label>
-      <%= date_field_tag :end_date %>
-    
-      <label>最低点数:</label>
-      <%= number_field_tag :min_review %>
-    
-      <%= submit_tag "絞り込み" %>
+
+<h3 class="pt-3">このページは様々な検索ができます</h3>
+
+<div class="row mt-5">
+  <div class="col-5">
+  <h6>絞り込み検索を行うことができます</h6>
+  ＜投稿日＞
+    <%= search_form_for @content, url: searches_path, class: "form-inline" do |f| %> 
+      <table class="table">
+        <thead>
+          <tr>
+            <th>開始日</th>
+            <th>終了日</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <div class="form-group">
+                <%= f.date_field :created_at_gteq%>
+              </div>
+            </td>
+            <span>~</span>
+            <td>
+              <div class="form-group">
+                <%= f.date_field :created_at_lteq%>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <%= submit_tag "絞り込み", class: "btn btn-primary" %>
     <% end %>
   </div>
+
   
-  <div class="col-6">
+  
+  <div class="col-7">
+    <h6>タグの検索を行うことができます</h6>
+    <h6>タグのボタンをクリックすると、そのタグが付与された投稿一覧が表示されます</h6>
     <div class="tag-list">
       <%= form_tag delete_admin_tags_path, method: :delete do %>
         <table class="table">
@@ -29,7 +51,7 @@
             <% @tags.each_slice(2) do |tags_row| %>
               <tr>
                 <% tags_row.each do |tag| %>
-                  <td><%= link_to tag.name, searches_path(tag_id: tag.id) %></td>
+                  <td><%= link_to tag.name, searches_path(tag_id: tag.id), class: "btn btn-primary" %></td>
                 <% end %>
               </tr>
             <% end %>
@@ -38,5 +60,4 @@
       <% end %>
     </div>
   </div>
-
 </div>
