--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="navbar navbar-light fixed-bottom" style="background-color: rgb(240, 153, 125);">
+<footer class="navbar navbar-light fixed-bottom">
   <div class="container">
     <div class="col text-center">
       <ul class="footer-menu list-inline">
