アイコンを追加

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="top col-md-12">
     <div class="top-title">
-      サ活レビューサイト<br>ととのーる
+      日々のサウナを<br>より楽しくしよう
     </div>
     <div class="top-image">
       <%= image_tag 'Sauna-bro.png', class: "img-fluid" %>
@@ -11,7 +11,7 @@
 <div class="text-center border-dotted border-t-2 border-fitting-pink py-20">
   <h1 class="font-kaisei text-2xl title-font text-gray-900 mb-4">ととの〜るの使い方</h1>
   <div class="text-base leading-relaxed mx-auto text-gray-500">
-    <p>ととの〜るはサウナが好きな人のためのサ活（サウナ活動）レビューサイトです。<br>日々の自分自身のサ活に点数をつけて次回のサ活へ改善していくことを目的として作成しました。</p>
+    <p>ととの〜るはサウナが好きな人のためのサ活（サウナ活動）レビューサイトです。<br>日々の自分自身のサ活をレビューして次回のサ活へ改善していくことを目的として作成しました。</p>
   </div>
   <%= render 'layouts/steam' %>
   <div class="flex mt-6 justify-center">
