--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,6 +35,16 @@ footer {
   position: relative;
 }
 
+.logo-img {
+  width: 50px;
+  height: 50px;
+}
+
+.footer-logo-img {
+  width: 50px;
+  height: 50px;
+  margin: 0 20px;
+}
 
 
 @keyframes steam01 {
