--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,23 +1,28 @@
 <header class="navbar navbar-light sticky-top" style="background-color: rgb(240, 153, 125);">
-  <div class="container">
+  <div class="container d-flex justify-content-between align-items-center">
+    <%= link_to root_path do %>
+      <%= image_tag 'logo2.png' , class:"logo-img" %>
+    <% end %>
     <% unless current_page?(root_path) %>
       <% if user_signed_in? %>
-        <li class="navbar-text">
-          ようこそ<%= current_user.name %>！
-        </li>
-        <li class="nav-item">
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-outline-danger" %>
-        </li>
+        <div class="navbar-text">
+          ようこそ<%= current_user.name %>さん
+        </div>
+        <div class="nav-item">
+          <%= link_to destroy_user_session_path, method: :delete  do %>
+            <%= image_tag 'logout.png', class:"logo-img" %>
+          <% end %>
+        </div>
       <% end %>
     <% end %>
     
     <% if admin_signed_in? %>
-      <li class="navbar-text">
+      <div class="navbar-text">
         お疲れ様です！
-      </li>
-      <li class="nav-item">
+      </div>
+      <div class="nav-item">
         <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-outline-danger" %>
-      </li>
+      </div>
     <% end %>
   </div>
 </header>
