--- a/app/views/user/contents/_index.html.erb
+++ b/app/views/user/contents/_index.html.erb
@@ -22,5 +22,8 @@
         </div>
       </div>
     <% end %>
+    <div class="paginate-index">
+      <%= paginate contents %>
+    </div>
   </div>
 </div>
