構文エラーの解消shadow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@ footer {
   display: none;
   color: #fff;
   text-align: center;
-  text-shadow: 3px 4px 3px rgb(61 70 70);
+  text-shadow: 3px 4px 3px rgb(61, 70, 70);
 }
 
 .top-image {
