--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,13 @@
-<header class="navbar navbar-light sticky-top" style="background-color: rgb(240, 153, 125);">
+<header class="flex items-center justify-between flex-wrap bg-fitting-pink px-2 py-2" >
   <div class="container d-flex justify-content-between align-items-center">
-    <%= link_to root_path do %>
-      <%= image_tag 'logo2.png' , class:"logo-img" %>
-    <% end %>
+    <div class="flex justify-between items-center">
+      <%= link_to root_path do %>
+        <%= image_tag 'logo2.png' , class:"logo-img" %>
+      <% end %>
+    </div>
     <% unless current_page?(root_path) %>
       <% if user_signed_in? %>
-        <div class="navbar-text">
+        <div class="flex items-center" >
           ようこそ<%= current_user.name %>さん
         </div>
         <div class="nav-item">
@@ -17,11 +19,10 @@
     <% end %>
     
     <% if admin_signed_in? %>
-      <div class="navbar-text">
-        お疲れ様です！
-      </div>
-      <div class="nav-item">
-        <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-outline-danger" %>
+      <div class="admin_sign-out">
+        <p>お疲れ様です！
+          <span><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-outline-danger" %> </span>
+        </p>
       </div>
     <% end %>
   </div>
