--- a/app/views/user/contents/_index.html.erb
+++ b/app/views/user/contents/_index.html.erb
@@ -22,10 +22,8 @@
         </div>
       </div>
     <% end %>
-    <div class="paginate-index">
-      <%= paginate contents %>
+    <div class="paginate-index col-md-6 offset-md-3">
+      <%= paginate contents, class: "pagination justify-content-center" %>
     </div>
   </div>
 </div>
-<div></div>
-<div></div>
