--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -54,7 +54,7 @@
   </div>
 </div>
 <div class="text-center pb-5">
-    <%= link_to "ゲストログイン（閲覧用）", homes_guest_sign_in_path, method: :post,class:"btn btn-outline-info mr-3" %>
-    <%= link_to "新規登録としてはじめる", new_user_registration_path,class:"btn btn-outline-info mr-3" %>
-    <%= link_to "ログインしてはじめる", new_user_session_path,class:"btn btn-outline-info" %>
+    <%= link_to "ゲストログイン（閲覧用）", homes_guest_sign_in_path, method: :post,class:"btn btn-outline-secondary mr-3" %>
+    <%= link_to "新規登録としてはじめる", new_user_registration_path,class:"btn btn-outline-secondary mr-3" %>
+    <%= link_to "ログインしてはじめる", new_user_session_path,class:"btn btn-outline-secondary" %>
 </div>
