--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-light sticky-top" style="background-color: rgb(240, 153, 125);">
+<header class="navbar navbar-light sticky-top fixed-top" style="background-color: rgb(240, 153, 125);">
   <div class="container d-flex justify-content-between align-items-center">
     <%= link_to root_path do %>
       <%= image_tag 'logo2.png' , class:"logo-img" %>
